--- a/app/views/scooters/index.html.erb
+++ b/app/views/scooters/index.html.erb
@@ -1,12 +1,7 @@
-<div class="banner">
-   <h1>rentscootscoot</h1>
-   <p>Rent scooter from us!</p>
-</div>
-
 <div class="container">
  <div class="list">
    <h2>Scooter List</h2>
-   <%= link_to 'Add a Cocktail', new_cocktail_path, class: 'list-btn' %>
+   <%= link_to 'Add a Scooter', new_scooter_path, class: 'list-btn' %>
  </div>
  <div class="row">
 <!--    <%# @cocktails.each do |cocktail| %>
