added cloudinary, carrierwave gem. added photo, name column to scooters table. rendered partial for new scooter. added .env file

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,11 +2,10 @@
   <div class="container">
      <h1>rentscootscoot</h1>
 
-     <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+     <%= simple_form_for :search, url: scooters_path, method: :get do |f| %>
        <div class="search-form-control form-group">
          <input class="form-control string required search-bar" type="text" name="search[query]" id="search_query" placeholder="Search..."/>
        </div>
      <% end %>
-
   </div>
 </div>
