--- a/app/views/scooters/new.html.erb
+++ b/app/views/scooters/new.html.erb
@@ -1,8 +1,3 @@
 <div class="container">
-  <%= simple_form_for @scooter do |f| %>
-    <%= f.input :description %>
-    <%= f.input :status, collection: ['Available', 'Unavailable']  %>
-    <%= f.input :location %>
-    <%= f.submit class: 'btn btn-primary' %>
-  <% end %>
+  <%= render 'form' %>
 </div>
