--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,8 @@
 <div class="banner" style="background-image: linear-gradient(rgba(255, 255, 255, .2), rgba(255, 255, 255, .2)), url(<%= image_path('banner-bg') %>)">
   <div class="container">
-     <h1>rentscootscoot</h1>
-
-     <%= simple_form_for :search, url: scooters_path, method: :get do |f| %>
-       <div class="search-form-control form-group">
-         <input class="form-control string required search-bar" type="text" name="search[query]" id="search_query" placeholder="Search..."/>
-       </div>
-     <% end %>
+    <h1>rentscootscoot</h1>
+    <%= form_tag("/scooters", method: 'get') do %>
+      <%= text_field_tag :search, nil, placeholder: "Search...", class: "form-control string required search-bar" %>
+    <% end %>
   </div>
 </div>
