--- a/app/views/scooters/index.html.erb
+++ b/app/views/scooters/index.html.erb
@@ -1,9 +1,5 @@
 <div class="container">
- <div class="list">
-   <h2>Scooter List</h2>
-   <%= link_to 'Add a Scooter', new_scooter_path, class: 'list-btn' %>
- </div>
- <div class="row">
+ <div class="row my-5">
    <% @scooters.each do |scooter| %>
     <div class="card" style="width: 18rem;">
       <%= cl_image_tag scooter.photo, alt: scooter.name, class: 'card-img-top', width: 400, height: 200 %>
@@ -16,5 +12,10 @@
       </div>
     </div>
    <% end %>
+ </div>
+
+ <div class="list">
+   <h2>Scooter List</h2>
+   <%= link_to 'Add a Scooter', new_scooter_path, class: 'list-btn' %>
  </div>
 </div>
