fixed banner for heroku

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,7 @@
   height: 100vh;
   padding: 150px 0;
   text-align: center;
+  background-image: linear-gradient(rgba(255, 255, 255, .2), rgba(255, 255, 255, .2)), asset-url('banner-bg.jpg');
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
