--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(255, 255, 255, .2), rgba(255, 255, 255, .2)), url(<%= image_path('banner-bg') %>)">
+<div class="banner">
   <div class="container">
     <h1>rentscootscoot</h1>
     <%= form_tag("/scooters", method: 'get') do %>
