--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -20,12 +20,13 @@
 .banner .search-bar {
   margin: 0 auto;
   width: 400px;
+  height: 50px;
   border-radius: 5px;
   opacity: .7;
+  padding-top: 12px;
 }
 
-.search-bar[name="search[query]"] {
-  font-size: 26px;
-  color: black;
-  font-weight: bold;
+.search-bar::placeholder {
+  font-size: 28px;
+  color: gray;
 }
