--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,3 +11,41 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.sign-up {
+  padding: 6px 40px;
+  border-radius: 5px;
+  color: white;
+  background-color: #F9A468;
+  font-weight: bold;
+  font-size: 20px;
+  &:hover {
+    color: white;
+    background-color: #e28646;
+  }
+}
+
+.log-in {
+  color: #F9A468;
+  font-weight: bold;
+  font-size: 20px;
+  &:hover {
+    color: #e28646;
+  }
+}
+
+.dropdown {
+  cursor: pointer;
+}
+
+.dropdown-item {
+  opacity: .7;
+}
+
+.nav-link {
+  font-size: 18px;
+  color: #F9A468 !important;
+  &:hover {
+    color: #E28646 !important;
+  }
+}
