--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,16 @@
 <div class="banner">
+
   <div class="container">
     <h1>rentscootscoot</h1>
     <%= form_tag("/scooters", method: 'get') do %>
       <%= text_field_tag :search, nil, placeholder: "Search...", class: "form-control string required search-bar" %>
     <% end %>
   </div>
+</div>
+
+<div class="container">
+  <h1>About us</h1>
+
+
+
 </div>
