--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,12 @@
 <div class="footer">
+  <div class="grow">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="https://github.com"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-facebook"></i></a>
   </div>
+</div>
   <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> at Le Wagon
+    Life is a journey <i class="fas fa-motorcycle"></i> Enjoy the ride
   </div>
 </div>
