--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: rgbargba(0, 0, 0, 0.9);
 }
 
 .footer-links {
@@ -14,8 +14,8 @@
 }
 
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: #0E0000;
+  opacity: 0.7;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
@@ -25,6 +25,14 @@
   opacity: 1;
 }
 
-.footer .fa-heart {
-  color: #D23333;
+.footer .fa-motorcycle {
+  color: #FFB27C;
 }
+
+.grow a:hover{
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+
+}
+
