--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,9 +10,31 @@
 
 <div class="container">
   <h1>About us</h1>
-<p>
+<p>When you book a bike with Rentscootscoot you can be sure that you rent a motorbike or scooter with the most trustworthy scooter and bike rental company worldwide. The customer experience is the same irregardless if you use our service in Bali. Our professional employees truly care and are dedicated to making your life and travel experience easier and more comfortable.</p>
+<p>By partnering with local bike rentals and supplying them with all the tools that we developed over the years, we offer tourists all over the world a fun, safe and well organised experience when renting a bike.</p>
+<p>Rentscootscoot.co is incorporated in Bali and operates since early 2019. </p>
+  <h3>Our details:</h3>
+  <p>Rentscootscoot.co</p>
+  <p>Canggu, Bali</p>
+</div>
 
-</p>
-
-
+<div class="container">
+  <h2>3 easy step to rent your scooter</h2>
+  <div class="card-description">
+    <div class="item-one">
+      <h5>Book Online</h5>
+      <p>Easy, fast and safe. We offer many international payment methods so you do not have to worry about foreign cash.</p>
+    </div>
+    <div class="item-two">
+      <h5>Delivery Service</h5>
+      <p>Just tell us where you are staying and we will deliver the bikes and accessories to your accomodation free of charge.</p>
+    </div>
+    <div class="item-three">
+      <h5>Enjoy Your Adventure</h5>
+      <p>Discover breathtaking sceneries and vibrant cities. Just leave the bike for us to pick up by the end of your adventure.</p>
+    </div>
+  </div>
+  <div class="btn-description">
+  <%= link_to "see all scooters", scooters_path %>
+  </div>
 </div>
