Add about us, details, and 3 easy steps to rent your scooter

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <div class="container">
-  <h2>3 easy step to rent your scooter</h2>
+  <h2>3 easy steps to rent your scooter</h2>
   <div class="card-description">
     <div class="item-one">
       <h5>Book Online</h5>
