--- a/app/views/scooters/_form.html.erb
+++ b/app/views/scooters/_form.html.erb
@@ -4,6 +4,7 @@
   <%= f.input :status, collection: ['Available', 'Unavailable']  %>
   <%= f.input :location %>
   <%= f.input :photo %>
+  <%= f.input :price %>
   <%= f.input :photo_cache, as: :hidden %>
   <%= f.submit class: 'btn btn-primary' %>
 <% end %>
