--- a/app/views/scooters/show.html.erb
+++ b/app/views/scooters/show.html.erb
@@ -26,6 +26,15 @@
         <div class="container mt-3">
           <h3 class="border-bottom">Reviews</h3>
         </div>
+
+        <div class="reviews">
+          <br>
+          <h4>All reviews</h4>
+          <% @reviews.each do |review| %>
+            <p><%= review.rating %></p>
+            <p><%= review.content %></p>
+          <% end %>
+        </div>
       </div>
     </div>
 
