--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,13 +10,17 @@
     <% if user_signed_in? %>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">MY BOOKINGS</a>
+          <a class="nav-link" href="/bookings">MY BOOKINGS</a>
         </li>
         <li class="nav-item mr-2">
           <a class="nav-link" href="#">BECOME A HOST</a>
         </li>
         <li class="nav-item dropdown">
-          <%= cl_image_tag @user.avatar, width: 36, height: 36, crop: :fit, g: :face, class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
+          <% if @user.avatar.present? %>
+            <%= cl_image_tag @user.avatar, width: 36, height: 36, crop: :fit, g: :face, class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
+          <% else %>
+            <%= image_tag "https://images.unsplash.com/photo-1505562130589-9879683e72da?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80", alt: "avatar" , class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
+          <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">View profile</a>
             <a class="dropdown-item" href="#">Settings</a>
