--- a/app/views/scooters/show.html.erb
+++ b/app/views/scooters/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container show-list">
   <div class="scoot">
     <div id="map" class="text-center">
       <p><%= @scooter.location %></p>
