--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container index-list">
   <div class="m-5">
     <% @bookings.each do |b| %>
       <div class="card-product mb-3">
