--- a/app/views/scooters/index.html.erb
+++ b/app/views/scooters/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container index-list">
  <div class="row my-5">
    <% @scooters.each do |scooter| %>
     <div class="card" style="width: 18rem;">
