--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,10 +10,10 @@
     <% if user_signed_in? %>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/bookings">MY BOOKINGS</a>
+          <a class="nav-link" href="/bookings">my bookings</a>
         </li>
         <li class="nav-item mr-2">
-          <a class="nav-link" href="#">BECOME A HOST</a>
+          <a class="nav-link" href="#">become a host</a>
         </li>
         <li class="nav-item dropdown">
           <% if @user.avatar.present? %>
@@ -22,8 +22,8 @@
             <%= image_tag "https://images.unsplash.com/photo-1505562130589-9879683e72da?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80", alt: "avatar" , class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
           <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">View profile</a>
-            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" href="#">view profile</a>
+            <a class="dropdown-item" href="#">settings</a>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
