--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 // Specific CSS for your home-page
 
 body {
+  width: 100%;
   height: 100vh;
   margin: 0;
   font-family: Roboto;
@@ -27,6 +28,9 @@ h2{
   margin: 0 0 40px;
 }
 
+#about-us {
+  margin-bottom: 100px;
+}
 
 .text-one {
   color: #FFB27C;
