--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [@scooter, @booking] do |f| %>
   <%= f.input :start_date %>
   <%= f.input :end_date %>
-  <%= f.submit class: 'btn btn-primary w-100' %>
+  <%= f.submit class: 'btn sign-up w-100' %>
 <% end %>
