--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -7,7 +7,14 @@
           <h5><%= b.scooter.name %></h5>
           <p><%= b.start_date %> - <%= b.end_date %></p>
           <p><%= b.scooter.description %></p>
-          <h6><%= link_to "Add review", booking_path(b), class: 'text text-secondary'  %></h6>
+        </div>
+        <div class="card-product-actions">
+          <h6>
+            <%= link_to edit_booking_path(b) do %>
+              <i class="fas fa-edit" style="color: #F9A468"></i>
+            <% end %>
+          </h6>
+          <h6><%= link_to "Add review", booking_path(b), class: 'btn btn-outline-primary' %></h6>
         </div>
       </div>
     <% end %>
