--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,7 @@
 <div class="container index-list">
+  <div style="margin-top: 5rem;">
+    <h1 class="text-center">My bookings</h1>
+  </div>
   <div class="m-5">
     <% @bookings.each do |b| %>
       <div class="card-product mb-3">
