--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,6 +28,10 @@
         <%= f.button :submit, "Sign up", class: 'btn sign-up' %>
       </div>
     <% end %>
-    <%= render "devise/shared/links" %>
+    <div class="login-btn-su">
+      <div class="container">
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
 </div>
