--- a/app/views/scooters/index.html.erb
+++ b/app/views/scooters/index.html.erb
@@ -15,7 +15,9 @@
  </div>
 
  <div class="list">
-   <h2>Scooter List</h2>
-   <%= link_to 'Add a Scooter', new_scooter_path, class: 'list-btn' %>
+   <h2 class="list-title">Scooter List</h2>
+   <div class="text-right">
+      <%= link_to 'Add a Scooter', new_scooter_path, class: 'btn sign-up' %>
+   </div>
  </div>
 </div>
