--- a/app/views/scooters/new.html.erb
+++ b/app/views/scooters/new.html.erb
@@ -1,3 +1,6 @@
 <div class="container">
-  <%= render 'form' %>
+  <div class="new-scooter">
+    <h1 class="text-center">Add a new scooter</h1>
+    <%= render 'form' %>
+  </div>
 </div>
