--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="grow">
   <div class="footer-links">
-    <a href="https://github.com"><i class="fab fa-github"></i></a>
+    <a href="https://github.com/rayhanw/rentscootscoot"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-facebook"></i></a>
   </div>
