--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -11,12 +11,11 @@ h2 {
   margin: 10px 0;
 }
 
-
 .login {
   background-color: rgba(0, 0, 0, 0.6);
-  border-radius: 4px;
+  border-radius: 5px;
   color: white;
-  padding: 20px 15px;
+  padding: 4px 45px;
 }
 
 .login-form-inputs {
@@ -29,7 +28,7 @@ h2 {
   height: 50px;
   border-top-left-radius: 50px * 2;
   border-top-right-radius: 50px * 2;
-  margin-top: -70px;
+  margin-top: -54px;
   margin-left: auto;
   margin-right: auto;
   color: white;
@@ -60,4 +59,16 @@ h2 {
   }
 }
 
+.login-btn-su {
+  position: absolute;
+  right: 8px;
+  bottom: 16px;
+}
 
+.new-scooter {
+  margin-top: 5rem;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 100vh;
+}
