--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,10 +31,10 @@
     <% else %>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item mr-5">
-          <%= link_to "LOG IN", new_user_session_path, class: 'btn log-in'  %>
+          <%= link_to "log in", new_user_session_path, class: 'btn log-in'  %>
         </li>
         <li class="nav-item active">
-          <%= link_to "SIGN UP", new_user_registration_path, class: 'btn sign-up' %>
+          <%= link_to "sign up", new_user_registration_path, class: 'btn sign-up' %>
         </li>
       </ul>
     <% end %>
