--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container index-list mt-2 mx-5">
+<div class="index-list mx-5">
   <%= simple_form_for [@booking, @review] do |f| %>
     <%= f.input :rating %>
     <%= f.input :content %>
