--- a/app/views/scooters/index.html.erb
+++ b/app/views/scooters/index.html.erb
@@ -17,7 +17,9 @@
  <div class="list">
    <h2 class="list-title">Scooter List</h2>
    <div class="text-right">
-      <%= link_to 'Add a Scooter', new_scooter_path, class: 'btn sign-up' %>
+      <% if policy(Scooter).create? %>
+        <%= link_to 'Add a Scooter', new_scooter_path, class: 'btn sign-up' %>
+      <% end %>
    </div>
  </div>
 </div>
