--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,7 +2,7 @@
   <div style="margin-top: 5rem;">
     <h1 class="text-center">My bookings</h1>
   </div>
-  
+
   <div class="m-5">
     <% @bookings.each do |b| %>
       <div class="card-product mb-3">
@@ -11,27 +11,23 @@
           <h2><%= b.scooter.name %></h2>
           <p><%= b.start_date %> - <%= b.end_date %></p>
           <p><%= b.scooter.description %></p>
-            <!--<p><button>Confirm</button>-->
-          <button onclick="myFunction()">Delete</button></p>
-          <script>
-          function myFunction() {
-            var x = confirm("Are you sure you want to delete?");
-            if (x)
-                return true;
-            else
-              return false;
-            }
-          </script>
         </div>
         <div class="card-product-actions">
-          <h6>
+          <h6 style="text-align: right">
             <%= link_to edit_booking_path(b) do %>
               <i class="fas fa-edit" style="color: #F9A468"></i>
             <% end %>
           </h6>
-          <h6><%= link_to "Add review", booking_path(b), class: 'btn btn-outline-primary' %></h6>
+          <h6>
+            <%= link_to "Add review", booking_path(b), class: 'btn btn-outline-primary' %>
+          </h6>
+          <h6 style="text-align: right">
+            <%= link_to "Delete", booking_path(b), method: :delete, confirm: 'Are you sure?', class: 'btn btn-warning' %>
+          </h6>
         </div>
       </div>
     <% end %>
+
+    <%= link_to "Back to list", scooters_path, class: 'btn sign-up mt-5'  %>
   </div>
 </div>
