--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,14 +6,14 @@
     <% end %>
     <ul class="actions">
       <li>
-        <a href="#about-us"><i class="fas fa-arrow-circle-down"></i></a>
+        <a href="#about-title"><i class="fas fa-arrow-circle-down"></i></a>
       </li>
     </ul>
   </div>
 </div>
 
 <div class="container" id="about-us">
-  <h1>About us</h1>
+  <h1 id="about-title">About us</h1>
   <p>When you book a bike with Rentscootscoot you can be sure that you rent a motorbike or scooter with the most trustworthy scooter and bike rental company worldwide. The customer experience is the same irregardless if you use our service in Bali. Our professional employees truly care and are dedicated to making your life and travel experience easier and more comfortable.</p>
   <p>By partnering with local bike rentals and supplying them with all the tools that we developed over the years, we offer tourists all over the world a fun, safe and well organised experience when renting a bike.</p>
   <p>Rentscootscoot.co is incorporated in Bali and operates since early 2019. </p>
