--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,11 @@
 <div class="footer">
   <div class="grow">
-  <div class="footer-links">
-    <a href="https://github.com/rayhanw/rentscootscoot"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
+    <div class="footer-links">
+      <a href="https://github.com/rayhanw/rentscootscoot" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
+    </div>
   </div>
-</div>
   <div class="footer-copyright">
     Life is a journey <i class="fas fa-motorcycle"></i> Enjoy the ride
   </div>
