added spacing between footer and content

--- a/app/views/scooters/index.html.erb
+++ b/app/views/scooters/index.html.erb
@@ -4,18 +4,20 @@
     <%= link_to 'Add a Scooter', new_scooter_path, class: 'btn sign-up' %>
   <% end %>
   <div class="row my-5">
-    <% @scooters.each do |scooter| %>
-      <div class="card" style="width: 18rem;">
-        <%= cl_image_tag scooter.photo, alt: scooter.name, class: 'card-img-top', width: 400, height: 200 %>
-        <div class="card-body">
-          <h5 class="card-title"><%= scooter.name %></h5>
-          <p class="card-text description"><%= scooter.description %></p>
-          <p><strong>$ <%= scooter.price %></strong></p>
+    <div class="scooters">
+      <% @scooters.each do |scooter| %>
+        <div class="card" style="width: 18rem;">
+          <%= cl_image_tag scooter.photo, alt: scooter.name, class: 'card-img-top', width: 400, height: 200 %>
+          <div class="card-body">
+            <h5 class="card-title"><%= scooter.name %></h5>
+            <p class="card-text description"><%= scooter.description %></p>
+            <p><strong>$ <%= scooter.price %></strong></p>
+          </div>
+          <div class="card-actions">
+            <%= link_to "More info", scooter_path(scooter), class: 'action text-primary'  %>
+          </div>
         </div>
-        <div class="card-actions">
-          <%= link_to "More info", scooter_path(scooter), class: 'action text-primary'  %>
-        </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
