--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -41,3 +41,44 @@ html {
   margin-top: 5rem;
   min-height: 140vh;
 }
+
+#user {
+  min-height: 94vh;
+}
+
+#my-title {
+  margin-top: 5rem;
+}
+
+.user-grid {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 24px;
+}
+
+.user-profile {
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, .2);
+  grid-row: 1 / span 1;
+  grid-column: 1 / span 1;
+}
+
+.user-socials {
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, .2);
+  grid-row: 1 / span 1;
+  grid-column: 2 / span 1;
+}
+
+.user-content {
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, .2);
+  grid-row: 2 / span 1;
+  grid-column: 1 / span 2;
+}
+
+.user-socials .list-inline > .socials > a {
+  font-size: 32px;
+  color: #e28646;
+  &:hover {
+    color: #F9A468;
+  }
+}
