added back button on scooter show

--- a/app/views/scooters/show.html.erb
+++ b/app/views/scooters/show.html.erb
@@ -45,5 +45,9 @@
         </div>
       </div>
     </div>
+
+    <div id="back">
+      <%= link_to 'Back to list', scooters_path, class: 'btn sign-up'  %>
+    </div>
   </div>
 </div>
