--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -8,9 +8,10 @@
       <div class="card-product mb-3">
         <%= cl_image_tag b.scooter.photo, width: 120, height: 120  %>
         <div class="card-product-infos">
-          <h2><%= b.scooter.name %></h2>
+          <h2 class="text-left"><%= b.scooter.name %></h2>
           <p><%= b.start_date %> - <%= b.end_date %></p>
           <p><%= b.scooter.description %></p>
+          <p id="price"></p>
         </div>
         <div class="card-product-actions">
           <h6 style="text-align: right">
@@ -18,11 +19,13 @@
               <i class="fas fa-edit" style="color: #F9A468"></i>
             <% end %>
           </h6>
-          <h6>
-            <%= link_to "Add review", booking_path(b), class: 'btn btn-outline-primary' %>
-          </h6>
+
           <h6 style="text-align: right">
-            <%= link_to "Delete", booking_path(b), method: :delete, confirm: 'Are you sure?', class: 'btn btn-warning' %>
+            <%= link_to "Delete", booking_path(b), method: :delete, class: 'btn btn-warning', data: { confirm: 'Are you sure?' } %>
+          </h6>
+
+          <h6>
+            <%= link_to "Add review", booking_path(b), class: 'btn log-in' %>
           </h6>
         </div>
       </div>
