--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -2,6 +2,6 @@
   <%= simple_form_for [@booking, @review] do |f| %>
     <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5] %>
     <%= f.input :content %>
-    <%= f.submit class: 'btn btn-primary' %>
+    <%= f.submit class: 'btn sign-up' %>
   <% end %>
 </div>
