change the currency from $ to Rp

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -13,7 +13,7 @@
             <%= b.start_date %> - <%= b.end_date %> (<strong><%= days = ((b.end_date - b.start_date) + 1).to_i %></strong> days)
           </p>
           <p>
-            <strong>$ <%= (b.scooter.price).to_i * days %></strong>
+            <strong>Rp <%= (b.scooter.price).to_i * days %></strong>
           </p>
           <p><%= b.scooter.description %></p>
           <p id="price"></p>
