add coords to scooter, added algolia places and mapbox plugin, added a map in index and show page

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,6 +1,8 @@
-#map {
-  height: 600px;
-  width: 500px;
-  position: sticky;
-  background-color: gray;
+.mapboxgl-popup {
+  max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
 }
