--- a/app/views/scooters/index.html.erb
+++ b/app/views/scooters/index.html.erb
@@ -4,6 +4,14 @@
     <%= link_to 'Add a Scooter', new_scooter_path, class: 'btn sign-up' %>
   <% end %>
   <div class="scooters">
+    <div
+      id="all-map"
+      class="mt-3"
+      style="width: 100%;
+      height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+    ></div>
     <div class="row my-5">
       <% @scooters.each do |scooter| %>
         <div class="card" style="width: 18rem;">
