--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/bookings">my bookings</a>
         </li>
+        <li class="navitem">
+          <%= link_to "add a scooter", new_scooter_path %>
+        </li>
         <li class="nav-item dropdown">
           <% if @user.avatar.present? %>
             <%= cl_image_tag @user.avatar, width: 36, height: 36, crop: :fit, g: :face, class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
