--- a/app/views/scooters/show.html.erb
+++ b/app/views/scooters/show.html.erb
@@ -42,7 +42,7 @@
         <div class="reviews">
           <br>
           <h4>All reviews</h4>
-          <% @reviews.each do |review| %>
+          <% @scooter.reviews.each do |review| %>
             <ul style="padding: 0; list-style: none;">
               <li class="text-left">
                 <strong><%= review.booking.user.name %></strong> (<%= review.created_at %>):
